# cue-agentic-profile-manager-system

./: .claudeignore  .codexignore  .gitignore  .gitmodules  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  biome.json  bunfig.toml  draft.md  install.sh  llms.txt  package.json  skills-lock.json
agents-fleet/: PREREQS.md  README.md  SHARED_CONTRACT.md  UI_IMPROVEMENTS.md
docs/: _config.yml  agent-context-budget.md  demo.tape  discovered.md  glossary.md  index.md  launch.md  llms-full.txt  self-evolution-upgrade-plan.md  sharing-profiles.md  shell-install.md
drafts/: 2026-06-02-komposztalhato-alapanyagok.md  2026-06-02-komposztalhato-alapanyagok.seo.md
evolution/: .gitignore  Makefile  README.md  ci.yml.example  pyproject.toml
evolution/evolution/: __init__.py  auto_evolve.py
evolution/evolution/core/: atomic_io.py  canary.py  claude_lm.py  config.py  constraints.py  cue_lint.py  cue_skill.py  dataset_builder.py  fitness.py  redact.py  regression.py
evolution/evolution/descriptions/: __init__.py  description_module.py  evolve_description.py  persona_eval.py  profile_yaml_writer.py  router_text.py  routing_dataset_builder.py  routing_fitness.py  smoke.py
evolution/evolution/skills/: evolve_skill.py  reflective.py  skill_module.py
evolution/tests/: test_cue_seams.py  test_description_seams.py  test_writer_loop.py
profiles/: README.md  SCHEMA.md  _featured.yaml  _types.ts  schema.json
resources/: cli-recipes.json
scripts/: gen-profile-catalog.ts  install.sh  publish-smithery.sh  record-demo-kitty.sh  update-repo-topics.sh
setup/: linux.md  (+5 more)
(+1468 files in other folders)
